:lipstick: Avoid permanent vertical scrollbar on scroller

--- a/src/app/complex/complex-results/complex-navigator/table-structure/table-structure.component.css
+++ b/src/app/complex/complex-results/complex-navigator/table-structure/table-structure.component.css
@@ -11,7 +11,8 @@
 }
 
 .scroller {
-  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 .interactors {
